# dashcyt

./: README.md  pyproject.toml
dashcyt/: wsgi.py
dashcyt/service/: __init__.py  app.py  auth.py  graph.py  models.py  report.py  schema.sql
dashcyt/service/static/: data.json
dashcyt/service/static/geojson/: Alcaldias.geojson
dashcyt/service/static/geojson/Contaminantes/: No2_Coberturas.geojson  No2_EstacionMeteorologica.geojson  O3_Coberturas.geojson  O3_EstacionMeteorologica.geojson  PM10_Coberturas.geojson  PM10_EstacionMeteorologica.geojson  PM25_Coberturas.geojson  PM25_EstacionMeteorologica.geojson  SO2_Coberturas.geojson  SO2_EstacionMeteorologica.geojson
dashcyt/service/static/geojson/Diabetes/: DiabetesPolygonsCoberturaPorClue.geojson  DiabetesPorCluesPuntos.geojson
dashcyt/service/static/geojson/Meteorologicas/: HumedadRelat_Cobertura.geojson  HumedadRelat_Estacion.geojson  Temperatura_86_21_Cobertura.geojson  Temperatura_86_21_PorEstacion.geojson
dashcyt/service/static/geojson/Respiratorias/: EnfermRespiratPolygonsCobertura.geojson  EnfermRespiratPorClues2015_2020.geojson
dashcyt/service/templates/: addgraph.html  addreport.html  base.html  base2.html  graphs.html  index.html  notdash.html  notdash2.html  pdftemplate.html  reports.html
docker/: Dockerfile  docker-compose.yml
tests/: test_dashcyt.py
